--- a/app/res/layout-land/home_screen.xml
+++ b/app/res/layout-land/home_screen.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    style="@style/MainPane"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,13 +11,23 @@
     android:layout_alignParentRight="true"
     android:layout_alignParentTop="true"
     android:background="@color/cc_core_bg"
-    android:paddingLeft="@dimen/content_start"
-    android:paddingRight="@dimen/content_start"
-    android:paddingStart="@dimen/content_start"
     android:layout_alignParentEnd="true"
-    android:paddingEnd="@dimen/content_start"
     android:layout_alignParentStart="true"
     tools:viewBindingIgnore="true">
+
+    <LinearLayout
+        android:id="@+id/llTopBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <include
+            android:id="@+id/commonAppBar"
+            layout="@layout/connectid_title_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/connect_alert_tile"
@@ -73,6 +82,8 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:layout_height="wrap_content">
 
         <RelativeLayout
