--- a/app/res/layout/fragment_connect_delivery_list.xml
+++ b/app/res/layout/fragment_connect_delivery_list.xml
@@ -5,6 +5,20 @@
     android:layout_height="match_parent"
     android:background="@color/connect_background_color">
 
+    <LinearLayout
+        android:id="@+id/llTopBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <include
+            android:id="@+id/commonAppBar"
+            layout="@layout/connectid_title_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/delivery_list"
         android:layout_width="match_parent"
@@ -12,7 +26,7 @@
         app:layout_constraintBottom_toTopOf="@+id/llFilterByStatus"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/llTopBar" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/llFilterByStatus"
