--- a/app/res/layout/home_screen.xml
+++ b/app/res/layout/home_screen.xml
@@ -6,8 +6,21 @@
     android:layout_height="match_parent"
     android:background="@color/cc_core_bg"
     android:orientation="vertical"
-    android:padding="4dp"
     tools:viewBindingIgnore="true">
+
+    <LinearLayout
+        android:id="@+id/llTopBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <include
+            android:id="@+id/commonAppBar"
+            layout="@layout/connectid_title_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/connect_alert_tile"
@@ -130,6 +143,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/home_gridview_buttons"
                 android:layout_width="match_parent"
+                android:layout_margin="5dp"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/cvDailyLimitView"
                 android:nestedScrollingEnabled="false"
