--- a/app/res/layout/select_install_mode_fragment.xml
+++ b/app/res/layout/select_install_mode_fragment.xml
@@ -72,8 +72,9 @@
                             android:id="@+id/btn_fetch_uri"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
+                            android:paddingHorizontal="24dp"
                             SquareButtonWithText:backgroundColor="@color/cc_brand_color"
-                            SquareButtonWithText:img="@drawable/startup_barcode"
+                            SquareButtonWithText:img="@drawable/qrcode_solid"
                             SquareButtonWithText:subtitle="Scan Application Barcode"
                             SquareButtonWithText:textColor="@color/white"/>
                     </FrameLayout>
@@ -92,8 +93,9 @@
                             android:layout_height="match_parent"
                             android:background="@drawable/tile_drop_shadow_small_margins"
                             android:gravity="end"
+                            android:paddingHorizontal="18dp"
                             SquareButtonWithText:backgroundColor="@color/cc_light_cool_accent_color"
-                            SquareButtonWithText:img="@drawable/startup_url"
+                            SquareButtonWithText:img="@drawable/enter_code"
                             SquareButtonWithText:subtitle="Enter Code"
                             SquareButtonWithText:textColor="@color/white"/>
                     </FrameLayout>
