--- a/app/res/layout/install_confirm_fragment.xml
+++ b/app/res/layout/install_confirm_fragment.xml
@@ -77,7 +77,7 @@
                                 android:layout_height="wrap_content"
                                 android:padding="16dp"
                                 SquareButtonWithText:backgroundColor="@color/cc_attention_positive_color"
-                                SquareButtonWithText:img="@drawable/download_icon"
+                                SquareButtonWithText:img="@drawable/download"
                                 SquareButtonWithText:subtitle="Start install"
                                 SquareButtonWithText:textColor="@color/white"
                                 />
