--- a/app/res/layout/activity_hquser_invite.xml
+++ b/app/res/layout/activity_hquser_invite.xml
@@ -43,7 +43,7 @@
         app:layout_constraintTop_toBottomOf="@+id/connectMediumTextView"
         app:roundButtonBackgroundColor="@color/connect_blue_color"
         app:roundButtonTextColor="@color/white"
-        app:roundButtonTextSize="6"
+        app:roundButtonTextSize="6sp"
         tools:text="Accept" />
 
     <org.commcare.views.connect.RoundedButton
@@ -59,7 +59,7 @@
         app:layout_constraintTop_toBottomOf="@+id/btn_accept_invitation"
         app:roundButtonBackgroundColor="@color/connect_blue_color"
         app:roundButtonTextColor="@color/white"
-        app:roundButtonTextSize="6"
+        app:roundButtonTextSize="6sp"
         tools:text="Denied" />
 
     <androidx.constraintlayout.widget.Guideline
