--- a/app/res/layout/install_confirm_fragment.xml
+++ b/app/res/layout/install_confirm_fragment.xml
@@ -77,7 +77,7 @@
                                 android:layout_height="wrap_content"
                                 android:padding="16dp"
                                 SquareButtonWithText:backgroundColor="@color/cc_attention_positive_color"
-                                SquareButtonWithText:img="@drawable/download"
+                                SquareButtonWithText:img="@drawable/install_start"
                                 SquareButtonWithText:subtitle="Start install"
                                 SquareButtonWithText:textColor="@color/white"
                                 />
@@ -98,7 +98,7 @@
                                 android:gravity="end"
                                 android:padding="16dp"
                                 SquareButtonWithText:backgroundColor="@color/cc_neutral_color"
-                                SquareButtonWithText:img="@drawable/start_over"
+                                SquareButtonWithText:img="@drawable/install_stop"
                                 SquareButtonWithText:subtitle="Start over"
                                 SquareButtonWithText:textColor="@color/white"/>
                         </FrameLayout>
