--- a/app/res/layout/select_install_mode_fragment.xml
+++ b/app/res/layout/select_install_mode_fragment.xml
@@ -74,7 +74,7 @@
                             android:layout_height="match_parent"
                             android:paddingHorizontal="24dp"
                             SquareButtonWithText:backgroundColor="@color/cc_brand_color"
-                            SquareButtonWithText:img="@drawable/qrcode_solid"
+                            SquareButtonWithText:img="@drawable/startup_barcode"
                             SquareButtonWithText:subtitle="Scan Application Barcode"
                             SquareButtonWithText:textColor="@color/white"/>
                     </FrameLayout>
@@ -95,7 +95,7 @@
                             android:gravity="end"
                             android:paddingHorizontal="18dp"
                             SquareButtonWithText:backgroundColor="@color/cc_light_cool_accent_color"
-                            SquareButtonWithText:img="@drawable/enter_code"
+                            SquareButtonWithText:img="@drawable/startup_url"
                             SquareButtonWithText:subtitle="Enter Code"
                             SquareButtonWithText:textColor="@color/white"/>
                     </FrameLayout>
