--- a/app/res/layout/fragment_phone_available_bottom_sheet.xml
+++ b/app/res/layout/fragment_phone_available_bottom_sheet.xml
@@ -8,57 +8,66 @@
         android:backgroundTint="@color/transparent"
         tools:context="org.commcare.fragments.connectId.ConnectIdPhoneAvailableBottomSheet">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="16dp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:orientation="horizontal">
 
-                <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:contentDescription="@null"
-                    android:src="@drawable/ic_primary_portrait" />
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:contentDescription="@null"
+                android:src="@drawable/ic_primary_portrait" />
 
-                <org.commcare.views.connect.connecttextview.ConnectMediumTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:fontFamily="@font/roboto_medium"
-                    android:text="@string/connect_phone_unavailable"
-                    android:textColor="@color/connect_warning_color"
-                    android:textSize="16sp" />
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/phone_number"
+            <org.commcare.views.connect.connecttextview.ConnectBoldTextView
+                android:id="@+id/connectBoldTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:fontFamily="@font/roboto_regular"
-                android:text="+91 7748962888"
-                android:textColor="@color/connect_subtext"
-                android:textSize="20sp" />
+                android:fontFamily="@font/roboto_medium"
+                android:text="@string/connect_phone_unavailable"
+                android:textColor="@color/connect_warning_color"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+                app:layout_constraintStart_toEndOf="@+id/imageView2"
+                app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
-            <TextView
+            <org.commcare.views.connect.connecttextview.ConnectMediumTextView
+                android:id="@+id/phone_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="24dp"
+                android:layout_marginTop="16dp"
+                android:fontFamily="@font/roboto_regular"
+                android:text="+91 7748962888"
+                android:textColor="@color/connect_secondary_text"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="@+id/connectBoldTextView"
+                app:layout_constraintTop_toBottomOf="@+id/connectBoldTextView" />
+
+            <org.commcare.views.connect.connecttextview.ConnectMediumTextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:fontFamily="@font/roboto_regular"
                 android:text="Do you want to recover your account? "
-                android:textColor="@color/connect_subtext_80"
-                android:textSize="16sp" />
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintStart_toStartOf="@+id/phone_number"
+                app:layout_constraintTop_toBottomOf="@+id/phone_number" />
 
             <RelativeLayout
                 android:id="@+id/relativeLayout1"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView">
 
                 <org.commcare.views.connect.RoundedButton
                     android:id="@+id/back_button"
@@ -92,7 +101,7 @@
                     app:roundButtonIconLeftAlign="false"
                     app:roundButtonTextColor="@color/white" />
             </RelativeLayout>
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </FrameLayout>
 </layout>
